// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a large icon 1`] = `
<svg
  class="Icon Icon--large Icon--primary"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders aria properties 1`] = `
<svg
  aria-label="my label"
  aria-labelledby="another label"
  class="Icon Icon--small Icon--primary"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "muted" icon 1`] = `
<svg
  class="Icon Icon--large Icon--muted"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "negative" icon 1`] = `
<svg
  class="Icon Icon--large Icon--negative"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "positive" icon 1`] = `
<svg
  class="Icon Icon--large Icon--positive"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "primary" icon 1`] = `
<svg
  class="Icon Icon--large Icon--primary"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "secondary" icon 1`] = `
<svg
  class="Icon Icon--large Icon--secondary"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "warning" icon 1`] = `
<svg
  class="Icon Icon--large Icon--warning"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders as a "white" icon 1`] = `
<svg
  class="Icon Icon--large Icon--white"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders the component 1`] = `
<svg
  class="Icon Icon--small Icon--primary"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`renders the component with an additional class name 1`] = `
<svg
  class="Icon Icon--small Icon--primary my-extra-class"
  data-test-id="cf-ui-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M7 10l5 5 5-5z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;
